[gd_scene load_steps=128 format=2]

[ext_resource path="res://PlaceHolderAssets/WestwickAssets/Sprites/ElizabethWalk.png" type="Texture" id=1]
[ext_resource path="res://Player/OverworldPlayer.gd" type="Script" id=2]
[ext_resource path="res://CameraEffects/OverworldCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlaceHolderAssets/WestwickAssets/MuiscAndSounds/a_enter_next_area.wav" type="AudioStream" id=4]
[ext_resource path="res://PlaceHolderAssets/WestwickAssets/MuiscAndSounds/a_use_door.wav" type="AudioStream" id=5]
[ext_resource path="res://World/OverworldUI/OverworldUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://PlaceHolderAssets/SproutLandsSprites/characters/Premium Charakter Spritesheet.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=3]
radius = 6.0

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 0, 768, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 7 )
region = Rect2( 48, 768, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 7 )
region = Rect2( 96, 768, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 7 )
region = Rect2( 144, 768, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 7 )
region = Rect2( 192, 768, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 7 )
region = Rect2( 240, 768, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 288, 768, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 7 )
region = Rect2( 336, 768, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 0, 864, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 48, 864, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 7 )
region = Rect2( 96, 864, 48, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 144, 864, 48, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 7 )
region = Rect2( 192, 864, 48, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 7 )
region = Rect2( 240, 864, 48, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 7 )
region = Rect2( 288, 864, 48, 48 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 7 )
region = Rect2( 336, 864, 48, 48 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 7 )
region = Rect2( 0, 912, 48, 48 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 7 )
region = Rect2( 48, 912, 48, 48 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 7 )
region = Rect2( 96, 912, 48, 48 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 7 )
region = Rect2( 144, 912, 48, 48 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 7 )
region = Rect2( 192, 912, 48, 48 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 7 )
region = Rect2( 240, 912, 48, 48 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 7 )
region = Rect2( 288, 912, 48, 48 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 7 )
region = Rect2( 336, 912, 48, 48 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 7 )
region = Rect2( 0, 816, 48, 48 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 7 )
region = Rect2( 48, 816, 48, 48 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 7 )
region = Rect2( 96, 816, 48, 48 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 7 )
region = Rect2( 144, 816, 48, 48 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 7 )
region = Rect2( 192, 816, 48, 48 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 7 )
region = Rect2( 240, 816, 48, 48 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 7 )
region = Rect2( 288, 816, 48, 48 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 7 )
region = Rect2( 336, 816, 48, 48 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 7 )
region = Rect2( 0, 576, 48, 48 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 7 )
region = Rect2( 48, 576, 48, 48 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 7 )
region = Rect2( 96, 576, 48, 48 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 7 )
region = Rect2( 144, 576, 48, 48 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 7 )
region = Rect2( 192, 576, 48, 48 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 7 )
region = Rect2( 240, 576, 48, 48 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 7 )
region = Rect2( 288, 576, 48, 48 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 7 )
region = Rect2( 336, 576, 48, 48 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 7 )
region = Rect2( 0, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 48, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 96, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 144, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 192, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 240, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 288, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 336, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 0, 720, 48, 48 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 7 )
region = Rect2( 48, 720, 48, 48 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 7 )
region = Rect2( 96, 720, 48, 48 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 7 )
region = Rect2( 144, 720, 48, 48 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 7 )
region = Rect2( 192, 720, 48, 48 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 7 )
region = Rect2( 240, 720, 48, 48 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 7 )
region = Rect2( 288, 720, 48, 48 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 7 )
region = Rect2( 336, 720, 48, 48 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 7 )
region = Rect2( 0, 624, 48, 48 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 7 )
region = Rect2( 48, 624, 48, 48 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 7 )
region = Rect2( 96, 624, 48, 48 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 7 )
region = Rect2( 144, 624, 48, 48 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 7 )
region = Rect2( 192, 624, 48, 48 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 7 )
region = Rect2( 240, 624, 48, 48 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 7 )
region = Rect2( 288, 624, 48, 48 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 7 )
region = Rect2( 336, 624, 48, 48 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 7 )
region = Rect2( 0, 960, 48, 48 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 7 )
region = Rect2( 48, 960, 48, 48 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 7 )
region = Rect2( 96, 960, 48, 48 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 7 )
region = Rect2( 144, 960, 48, 48 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 7 )
region = Rect2( 192, 960, 48, 48 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 7 )
region = Rect2( 240, 960, 48, 48 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 7 )
region = Rect2( 288, 960, 48, 48 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 7 )
region = Rect2( 336, 960, 48, 48 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 7 )
region = Rect2( 0, 1056, 48, 48 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 7 )
region = Rect2( 48, 1056, 48, 48 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 7 )
region = Rect2( 96, 1056, 48, 48 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 7 )
region = Rect2( 144, 1056, 48, 48 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 7 )
region = Rect2( 192, 1056, 48, 48 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 7 )
region = Rect2( 240, 1056, 48, 48 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 7 )
region = Rect2( 288, 1056, 48, 48 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 7 )
region = Rect2( 336, 1056, 48, 48 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 7 )
region = Rect2( 0, 1104, 48, 48 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 7 )
region = Rect2( 48, 1104, 48, 48 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 7 )
region = Rect2( 96, 1104, 48, 48 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 7 )
region = Rect2( 144, 1104, 48, 48 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 7 )
region = Rect2( 192, 1104, 48, 48 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 7 )
region = Rect2( 240, 1104, 48, 48 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 7 )
region = Rect2( 288, 1104, 48, 48 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 7 )
region = Rect2( 336, 1104, 48, 48 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 7 )
region = Rect2( 0, 1008, 48, 48 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 7 )
region = Rect2( 48, 1008, 48, 48 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 7 )
region = Rect2( 96, 1008, 48, 48 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 7 )
region = Rect2( 144, 1008, 48, 48 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 7 )
region = Rect2( 192, 1008, 48, 48 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 7 )
region = Rect2( 240, 1008, 48, 48 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 7 )
region = Rect2( 288, 1008, 48, 48 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 7 )
region = Rect2( 336, 1008, 48, 48 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "AxeDown",
"speed": 10.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "AxeLeft",
"speed": 10.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "AxeRight",
"speed": 10.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "AxeUp",
"speed": 10.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "HoeDown",
"speed": 10.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "HoeLeft",
"speed": 10.0
}, {
"frames": [ SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "HoeRight",
"speed": 10.0
}, {
"frames": [ SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ) ],
"loop": true,
"name": "HoeUp",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "IdleDown",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "IdleRight",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "IdleUp",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "WalkDown",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "WalkLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "WalkRight",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "WalkUp",
"speed": 5.0
}, {
"frames": [ SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ) ],
"loop": true,
"name": "WaterDown",
"speed": 10.0
}, {
"frames": [ SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ) ],
"loop": true,
"name": "WaterLeft",
"speed": 10.0
}, {
"frames": [ SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ) ],
"loop": true,
"name": "WaterRight",
"speed": 10.0
}, {
"frames": [ SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ) ],
"loop": true,
"name": "WaterUp",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=23]
radius = 5.0

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 4, 4 )

[node name="OverworldPlayer" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -5 )
frames = SubResource( 2 )
animation = "WaterRight"
frame = 6
playing = true

[node name="OverworldCamera" parent="." instance=ExtResource( 3 )]

[node name="InteractableDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableDetector"]
position = Vector2( 8, 0 )
shape = SubResource( 23 )

[node name="DoorDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorDetector"]
shape = SubResource( 24 )

[node name="Sounds" type="Node" parent="."]

[node name="UseDoor" type="AudioStreamPlayer" parent="Sounds"]
pause_mode = 2
stream = ExtResource( 5 )
bus = "Sounds"

[node name="EnterNewArea" type="AudioStreamPlayer" parent="Sounds"]
pause_mode = 2
stream = ExtResource( 4 )
bus = "Sounds"

[node name="OverworldUI" parent="." instance=ExtResource( 6 )]

[connection signal="area_entered" from="DoorDetector" to="." method="_on_DoorDetector_area_entered"]
